<resources>
    <string name="app_name">CheckArt</string>
    <string name="prompt_email">Your Email</string>
    <string name="prompt_username">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_rep">Repeat Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_google">Log in with google</string>
    <string name="welcome">"Welcome To Check Art"</string>
    <string name="letsgo">"Let's Get Started"</string>
    <string name="create_acc">"Welcome To Check Art"</string>
    <string name="email_not_found">"Email Not Found !"</string>
    <string name="username_not_found">"Username Not Found !"</string>
    <string name="signin_to_continue">"Sign in to continue"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="incorrect_password"> Oops! Your Password Is Not Correct !</string>
    <string name="forget_password">Forgotten password</string>
    <string name="restore_password">Restore your password</string>
    <string name="restore">"Restore Password"</string>
    <string name="diff_pass">Passwords Does Not Match !</string>
    <string name="invalid_password">Invalid Password !</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forget_pass">"Forgotten password ?"</string>
    <string name="register_txt">"Don’t have an account?"</string>
    <string name="register">"Register"</string>
    <string name="already_registred">"Already have an account?"</string>
    <string name="email_confirmation">"*You will receive an email to change your password."</string>
    <string name="about">About</string>
    <string name="user_guide">User Guide</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="donate_3"><![CDATA[Donate <3]]></string>
    <string name="current_version">Current Version</string>
    <string name="first_step">First Step</string>
    <string name="check_from_camera">Check From Camera</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorite">My Favorite</string>
    <string name="title_profile">My Profile</string>
    <string name="title_about">About</string>
    <string name="credit_card_or_debit_card">Credit Card or Debit Card</string>
    <string name="donate_on_paypal">Donate on Paypal</string>
    <string name="donate_via_bank_transfer">Donate via Bank Transfer</string>
    <string name="invalid_card_details">Invalid Card Details</string>
    <string name="card_example">1231 – 2312 – 3123 - 1231</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="ccv">Security Code</string>
    <string name="date_example">02/28</string>
    <string name="code_example">123</string>
    <string name="dummy_title">Tapis berber du moyenne atlas tapis berber du moyenne atlas</string>
    <string name="what_s_new">What\'s new :</string>
    <string name="picture_matches">This picture matches :</string>
    <string name="colors_in_this_picture">Colors in this picture :</string>
    <string name="tapis_dummy">Tapis Beni Ouarraine :</string>
    <string name="percentage">%</string>
    <string name="search_by_color">Search By color :</string>
    <string name="nothing_found">No picture Found !</string>
    <string name="we_didn_t_find_any_picture_maching_this_color">We didn’t find any picture matching this color.</string>
    <string name="action_back">Back To Home</string>
    <string name="profile">Profile</string>
    <string name="sample_username">Elghazi Ilyass</string>
    <string name="sample_user_id">\@elyassgh</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="mail">E-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="your_user_id">Your User Id</string>
    <string name="old_password">Old Password</string>
    <string name="user_name">User name</string>
    <string name="email_uname_doesnt_match">Email and Username Does Not Match !</string>
    <string name="already_used">Email already used</string>
    <string name="email_pass_empty">Email Or Password is not set !</string>

    <string name="menu_next_image_detection_filter">Next Tracker</string>
    <string name="menu_next_camera">Next Camera</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="menu_next_convolution_filter">Next Kernel</string>
    <string name="menu_next_curve_filter">Next Curve</string>
    <string name="menu_next_mixer_filter">Next Mixer</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_image_size">Size</string>
    <string name="photo_delete_prompt_message">This photo is saved in your Gallery. Do you want to delete it?</string>
    <string name="photo_delete_prompt_title">Delete photo?</string>
    <string name="photo_error_message">Failed to save photo</string>
    <string name="photo_edit_chooser_title">Edit photo with&#8230;</string>
    <string name="photo_send_chooser_title">Share photo with&#8230;</string>
    <string name="photo_send_extra_subject">My photo from Second Sight</string>
    <string name="photo_send_extra_text">Check out my photo from the Second Sight app! http://nummist.com/opencv/</string>
    <string name="share">Share</string>

</resources>