<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home">
    </item>
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_search"
        android:title="@string/title_explore">
    </item>
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_love"
        android:title="@string/title_favorite">
    </item>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_buser"
        android:title="@string/title_profile">
    </item>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/title_about">
    </item>

</menu>