<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".userhandler.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letsgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/letsgo"
        android:textColor="@color/colorTitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/newacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/signin_to_continue"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="48dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/input_bg"

        android:textSize="14sp"
        android:textColor="@color/colorText"
        android:fontFamily="@font/poppins_regular"

        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:drawableStart="@drawable/ic_user"

        android:hint="@string/prompt_username"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newacc"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_bg"

        android:textSize="14sp"
        android:textColor="@color/colorText"
        android:fontFamily="@font/poppins_regular"

        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:drawableStart="@drawable/ic_message"

        android:hint="@string/prompt_email"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:background="@drawable/input_bg"

        android:textSize="14sp"
        android:textColor="@color/colorText"
        android:fontFamily="@font/poppins_regular"

        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:drawableStart="@drawable/ic_password"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/passrep"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/prompt_password_rep"
        android:inputType="textPassword"
        android:background="@drawable/input_bg"

        android:textSize="14sp"
        android:textColor="@color/colorText"
        android:fontFamily="@font/poppins_regular"

        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:drawableStart="@drawable/ic_password"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <TextView
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/invalid_username"
        android:textColor="@color/colorDanger"

        android:textSize="12sp"
        android:layout_marginStart="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passrep" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="57dp"
        android:background="@drawable/btn_bg"
        android:elevation="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/action_sign_up"
        android:textAllCaps="false"
        android:textColor="#FFF"
        tools:layout_editor_absoluteY="445dp"
        android:shadowColor="@color/colorPrimary"

        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/already_registred"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/signin"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:autoLink="none"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>