<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_not_found"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/nothing_found"
        android:textColor="@color/colorTitle"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/we_didn_t_find_any_picture_maching_this_color"
        android:textColor="@color/colorText"
        android:textSize="14sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="57dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/action_back"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:shadowColor="@color/colorPrimary"
        android:layout_marginTop="15dp" />

</LinearLayout>