<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.PaymentActivity">

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:layout_marginStart="16dp"
      android:layout_marginTop="45dp"
      android:drawablePadding="12dp"
      android:fontFamily="@font/poppins_bold"
      android:text="@string/credit_card_or_debit_card"
      android:textColor="@color/colorTitle"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:drawableLeft="@drawable/ic_back" />

  <ImageView
      android:id="@+id/separator"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="0dp"
      android:layout_marginTop="108dp"
      android:background="@drawable/ic_separator_empty"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <TextView
      android:id="@+id/wrong"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="22dp"
      android:layout_marginTop="8dp"
      android:drawablePadding="10dp"
      android:fontFamily="@font/poppins_regular"

      android:text="@string/invalid_card_details"

      android:textColor="@color/colorDanger"
      android:textSize="14sp"
      android:visibility="visible"
      android:drawableLeft="@drawable/ic_baseline_error_outline_24"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/separator" />

  <TextView
      android:id="@+id/card_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="35dp"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/poppins_bold"
      android:text="@string/card_number"
      android:textColor="@color/colorTitle"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/wrong" />

  <EditText
      android:id="@+id/card_number"
      android:layout_width="fill_parent"
      android:layout_height="48dp"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="5dp"
      android:background="@drawable/input_bg"
      android:drawableLeft="@drawable/ic_card"
      android:drawablePadding="15dp"

      android:ems="10"
      android:fontFamily="@font/poppins_regular"
      android:hint="@string/card_example"

      android:inputType="phone"
      android:paddingStart="15dp"
      android:paddingEnd="5dp"
      android:textColor="@color/colorText"

      android:textSize="14sp"

      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/card_label" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@+id/card_number"
      android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_weight="0.5">

      <TextView
          android:id="@+id/date_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="22dp"
          android:fontFamily="@font/poppins_bold"
          android:text="@string/expiration_date"
          android:textColor="@color/colorTitle"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="parent" />

      <EditText
          android:id="@+id/date_number"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:layout_marginHorizontal="20dp"
          android:layout_marginTop="5dp"
          android:background="@drawable/input_bg"
          android:drawablePadding="15dp"
          android:ems="10"
          android:fontFamily="@font/poppins_regular"
          android:hint="@string/date_example"
          android:inputType="phone"
          android:paddingStart="15dp"
          android:paddingEnd="5dp"
          android:textColor="@color/colorText"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/date_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_weight="0.5">

      <TextView
          android:id="@+id/ccv_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="22dp"
          android:fontFamily="@font/poppins_bold"
          android:text="@string/ccv"
          android:textColor="@color/colorTitle"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="parent" />

      <EditText
          android:id="@+id/ccv"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:layout_marginHorizontal="20dp"
          android:layout_marginTop="5dp"
          android:background="@drawable/input_bg"
          android:drawablePadding="15dp"
          android:ems="10"
          android:fontFamily="@font/poppins_regular"
          android:hint="@string/code_example"
          android:inputType="phone"
          android:paddingStart="15dp"
          android:paddingEnd="5dp"
          android:textColor="@color/colorText"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ccv_label" />
    </LinearLayout>

  </LinearLayout>

  <Button
      android:id="@+id/donate"
      android:layout_width="fill_parent"
      android:layout_height="57dp"
      android:layout_marginHorizontal="20dp"
      android:background="@drawable/btn_bg"
      android:fontFamily="@font/poppins_bold"
      android:shadowColor="@color/colorPrimary"
      android:text="@string/donate_3"
      android:textAllCaps="false"
      android:textColor="#FFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>