<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"

        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textColor="@color/colorTitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/signin_to_continue"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:autofillHints="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_bg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:autofillHints="@string/prompt_password"
        android:inputType="textPassword"
        android:background="@drawable/input_bg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="343dp"
        android:layout_height="57dp"
        android:background="@drawable/btn_bg"
        android:elevation="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="#FFF"
        tools:layout_editor_absoluteY="445dp"
        android:shadowColor="@color/colorPrimary"

        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_separator"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinbtn">
    </ImageView>

    <Button
        android:id="@+id/googleSignin"
        android:layout_width="343dp"
        android:layout_height="57dp"
        android:elevation="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/action_sign_in_google"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:background="@drawable/light_btn_bg"
        tools:layout_editor_absoluteY="445dp"

        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        />

</androidx.constraintlayout.widget.ConstraintLayout>